# SrednjeveskiArhivi

./: .editorconfig  .gitattributes  .gitignore  ALINEJE.md  Cargo.toml  DEVELOPMENT.md  Dioxus.toml  LICENSE  PREDSTAVITEV.md  Predstavitev_projekta.md  README.md  build.rs  package-lock.json  package.json  tailwind.config.js  tailwind.css
.github/workflows/: main.yml
assets/images/: icon.icns  icon.rgba
assets/scripts/: auto_grow.js  autoresize.js  grid.js
assets/styles/: autoresize.css  grid.css  urejanje.css
presentation/: ALINEJE.md  PREDSTAVITEV.md
scripts/: main.py  main.sh  requirements.in  requirements.txt  setup.sh
scripts/config/: config.py  models.py  prompts.py
src/: database.rs  directories.rs  main.rs  pdf_to_text.rs  poskus.rs
src/components/: alert_info.rs  alert_success.rs  documents.rs  echo.rs  files.rs  hero.rs  mention_last.rs  mod.rs  navbar.rs  skeleton.rs
src/components/alerts/: base.rs  error.rs  info.rs  mod.rs  success.rs  warning.rs
src/components/documents/: input.rs  mod.rs  pdf.rs  text.rs
src/components/documents/display/: input.rs  mod.rs  pdf.rs  text.rs
src/components/documents/display/input/: input.rs  mod.rs  persons.rs
src/components/documents/display/properties/: basic.rs  keywords.rs  list_inputov_generator.rs  locations.rs  mod.rs  organisations.rs  persons.rs
src/components/documents/display/text/: date.rs  location.rs  mod.rs
src/components/documents/input/: input.rs  input_persons.rs  keywords.rs  list_inputov_generator.rs  mod.rs  organisations.rs  persons.rs
src/components/documents/list/: filters.rs  mod.rs  table.rs
src/components/documents/list/filters/: date.rs  keywords.rs  languages.rs  mod.rs  review.rs  sort.rs
src/components/mentions/: base.rs  first.rs  last.rs  mod.rs
src/entities/: category.rs  document.rs  document_location.rs  document_organization.rs  document_person.rs  label.rs  label_boolean.rs  label_date.rs  label_number.rs  label_text.rs  location.rs  location_alias.rs  mod.rs  organization.rs  organization_alias.rs  person.rs  person_alias.rs
src/pdf_to_text/: paddle_ocr_.py  pdf_to_text.py  tesseract_.py
src/utils/: date.rs  language.rs  mod.rs  ocr.rs  read_input.rs  text.rs
src/views/: blog.rs  display.rs  home.rs  mod.rs
src/views/documents/: display.rs  list.rs  mod.rs  upload.rs
src/views/documents/display_panes/: input_display.rs  input_fields.rs  mod.rs  pdf_display.rs  text_display.rs
src/views/organizations/: list.rs  mod.rs
src/views/persons/: lists.rs
tekst_datoteke/: tekst.txt
zapisi/txtji/: GZL I-1 (1243 april 13)-1.txt
zapisi/txtji_paddle/: GZL I-1 (1243 april 13)-1.txt  GZL I-2 (1271 november 17)-1.txt  GZL I-4 (1280 julij 22)-1.txt
zapisi/txtji_tesseract/: GZL I-2 (1271 november 17)-1.txt  GZL I-4 (1280 julij 22)-1.txt
