[package]
name = "srednjeveski-arhivi"
description = "Program for digitizing and searching medieval records"
authors = ["Vida Mlinar", "Filip Štamcar"]
repository = "https://github.com/Vida26365/SrednjeveskiArhivi"
license = "MIT"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.98"
cfg-if = "1.0.0"
dioxus = { version = "0.6.3", features = ["desktop", "router"] }
dioxus-heroicons = "0.4.0"
directories = "6.0.0"
icu_calendar = { version = "2.0.2", features = ["serde"] }
icu_locale = { version = "2.0.0", features = ["serde"] }
pdf2image = "0.1.3"
rusty-tesseract = "1.1.10"
sea-orm = { version = "1.1.11", features = ["sqlx-sqlite", "runtime-tokio", "macros", "with-time", "with-uuid"] }
serde = "1.0.219"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.20.0"
time = "0.3.41"
tokio = "1.45.0"
uuid = { version = "1.17.0", features = ["v7"] }

[build-dependencies]
cfg_aliases = "0.2.1"

[profile.release]
codegen-units = 1
strip = true
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
